--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 html {
     background-color: black;
     color: white;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+}
+img {
+   max-width: 100%; 
 }
